--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-app/.terraform/providers/registry.terraform.io/hashicorp/aws/5.6.2/windows_amd64/terraform-provider-aws_v5.6.2_x5.exe
+*/terraform-provider-aws_v5.6.2_x5.exe
